Bug 426794 - Configuration file is invalid in GHNS dialog
Summary: Configuration file is invalid in GHNS dialog
Status: RESOLVED FIXED
Alias: None
Product: alkimia
Classification: Frameworks and Libraries
Component: Online Quotes Editor (other bugs)
Version First Reported In: master
Platform: Other macOS
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-21 06:45 UTC by Ralf Habacker
Modified: 2020-11-04 00:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 8.0.5
Sentry Crash Report:


Attachments
screenshot (63.30 KB, image/png)
2020-09-21 06:45 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2020-09-21 06:45:31 UTC
Created attachment 131822 [details]
screenshot

SUMMARY


STEPS TO REPRODUCE
1. download https://binary-factory.kde.org/job/Alkimia_Nightly_macos/ 
2. unpack
3. select onlinequoteseditor5 and press ctrl while opening the app to override security restriction
4. Select alkimia5 profile
5. Press install

OBSERVED RESULT
A message appear that the configuration file is not valid 

EXPECTED RESULT
The dialog should load the listed entries

SOFTWARE/OS VERSIONS
macOS: 10.13
KDE Frameworks Version: 5.74
Qt Version: 5.15
Comment 1 Ralf Habacker 2020-10-27 14:18:04 UTC
Git commit 0b7cdee60bf8fd833d6796aea438a615c06649fd by Ralf Habacker.
Committed on 27/10/2020 at 14:17.
Pushed by habacker into branch 'master'.

Fix 'Configuration file is invalid in GHNS dialog'

The knsrc files are installed in the configuration directory, not app
config location to which the application name is appended.

M  +1    -1    src/alkonlinequotesprofile.cpp

https://invent.kde.org/office/alkimia/commit/0b7cdee60bf8fd833d6796aea438a615c06649fd