Fix 'Configuration file is invalid in GHNS dialog'

The knsrc files are installed in the configuration directory, not app
config location to which the application name is appended.

BUG:426794